<?xml version="1.0" encoding="UTF-8"?>
<!--/********************************************************************************
 * Copyright (c) 2014-2020 Cirrus Link Solutions and others
 *
 * This program and the accompanying materials are made available under the
 * terms of the Eclipse Public License 2.0 which is available at
 * http://www.eclipse.org/legal/epl-2.0.
 *
 * SPDX-License-Identifier: EPL-2.0
 *
 * Contributors:
 *   Cirrus Link Solutions - initial implementation
 ********************************************************************************/
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <main.basedir>${project.basedir}</main.basedir>
    <assertj.core.version>3.27.6</assertj.core.version>
    <commons.compress.version>1.28.0</commons.compress.version>
    <commons.io.version>2.20.0</commons.io.version>
    <commons.lang3.version>3.19.0</commons.lang3.version>
    <jackson.version>2.20.1</jackson.version>
    <jackson.annotations.version>2.20</jackson.annotations.version>
    <junit.version>4.13.2</junit.version>
    <slf4j.version>2.0.17</slf4j.version>
    <jaxb.api.version>2.3.1</jaxb.api.version>
    <logback.version>1.5.21</logback.version>
    <maven.compiler.version>3.14.1</maven.compiler.version>
    <maven.bundle.version>5.1.1</maven.bundle.version>
    <paho.version>1.2.5</paho.version>
    <protobuf.version>3.25.5</protobuf.version>
    <testng.version>6.9.10</testng.version>
  </properties>

  <groupId>org.eclipse.tahu</groupId>
  <artifactId>tahu</artifactId>
  <version>1.0.17</version>
  <packaging>pom</packaging>

  <name>Eclipse Tahu</name>
  <url>http://www.eclipse.org/tahu</url>
  <description>
    The Tahu project provides open-source implementations of Eclipse Sparkplug
  </description>

  <organization>
    <name>Eclipse Tahu</name>
    <url>http://www.eclipse.org/tahu</url>
  </organization>

  <developers>
    <developer>
      <id>ibinshtok</id>
      <name>Ilya Binshtok</name>
      <organization>Cirrus Link Solutions</organization>
      <organizationUrl>http://www.cirrus-link.com</organizationUrl>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>nathandavenport</id>
      <name>Nathan Davenport</name>
      <organization>Cirrus Link Solutions</organization>
      <organizationUrl>http://www.cirrus-link.com</organizationUrl>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>wes-johnson</id>
      <name>Wes Johnson</name>
      <organization>Cirrus Link Solutions</organization>
      <organizationUrl>http://www.cirrus-link.com</organizationUrl>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>ckienle</id>
      <name>Chad Kienle</name>
      <organization>Cirrus Link Solutions</organization>
      <organizationUrl>http://www.cirrus-link.com</organizationUrl>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
  </developers>
  <licenses>
    <license>
      <name>Eclipse Public License - Version 2.0</name>
      <url>https://www.eclipse.org/legal/epl-2.0</url>
    </license>
  </licenses>

  <scm>
    <url>https://github.com/eclipse/tahu.git</url>
    <connection>scm:git:git@github.com:eclipse/tahu.git</connection>
  </scm>

  <modules>
    <module>lib/core/pom.xml</module>

    <!--
      Do no change the order of these modules below - the last module MUST be deployed to Maven Central per this
      https://issues.sonatype.org/browse/NEXUS-9138
    -->
    <module>lib/edge/pom.xml</module>
    <module>lib/host/pom.xml</module>
    <module>compat_impl/edge/pom.xml</module>
    <module>compat_impl/host/pom.xml</module>
  </modules>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>6.9.10</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.5.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.paho</groupId>
      <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
      <version>${paho.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.protobuf</groupId>
      <artifactId>protobuf-java</artifactId>
      <version>${protobuf.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons.io.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
      <version>${jackson.annotations.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>

    <!-- Logging -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
      <version>${logback.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.version}</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>2.3.0</version>
        <executions>
          <execution>
            <id>add-third-party</id>
            <phase>package</phase>
            <goals>
              <goal>add-third-party</goal>
              <goal>download-licenses</goal>
            </goals>
            <configuration>
              <useMissingFile>true</useMissingFile>
              <excludedScopes>test</excludedScopes>
              <excludedGroups> (org.eclipse.tahu*)
              </excludedGroups>
              <licenseMerges>
                <licenseMerge>The Apache Software License, Version
                  2.0|Apache License, Version 2.0|Apache Public License
                  2.0|Apache License 2.0|Apache Software License -
                  Version 2.0</licenseMerge>
              </licenseMerges>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>1.6</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>deploy</phase>
            <goals>
              <goal>sign</goal>
            </goals>
            <configuration>
                <gpgArguments>
                    <arg>--pinentry-mode</arg>
                    <arg>loopback</arg>
                </gpgArguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!--
      The following is based on this: https://gitlab.eclipse.org/eclipsefdn/helpdesk/-/issues/6331
      -->
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.9.0</version>
        <extensions>true</extensions>
        <configuration>
          <publishingServerId>central</publishingServerId>
          <autoPublish>true</autoPublish>
        </configuration>
      </plugin>
    </plugins>
    <extensions>
      <extension>
        <groupId>org.kuali.maven.wagons</groupId>
        <artifactId>maven-s3-wagon</artifactId>
        <version>1.2.1</version>
      </extension>
    </extensions>
  </build>
</project>
